commit app.py and index.html

--- a/templates/index.html
+++ b/templates/index.html
@@ -323,7 +323,7 @@ This attribute is only used if the href attribute is set. -->
                                     <div style="font-size: 30px;font-family: 'Baskervville', serif;
                                         font-family: 'Tomorrow', sans-serif;
                                         font-family: 'Anton', sans-serif;
-                                        font-family: 'Arvo', serif;color: green;">200000$</div>
+                                        font-family: 'Arvo', serif;color: green;">{{categories[0]}}$</div>
                                     <div style="display: inline;">
                                         <i class=" fas fa-school ">
                                                 </i>
@@ -333,7 +333,7 @@ This attribute is only used if the href attribute is set. -->
                             <div class="card-footer border-top-blue-grey border-top-lighten-5 text-muted " style="padding: 2px;">
                                 <!-- <span class="float-left ">1 day ago</span> -->
                                 <div style="font-size: 30px; text-align: center;">
-                                    <div style="display: inline;font-family: 'Baskervville', serif;"> Education </div>
+                                    <div style="display: inline;font-family: 'Baskervville', serif;"> Personal </div>
                                 </div>
                             </div>
                         </div>
@@ -354,7 +354,7 @@ This attribute is only used if the href attribute is set. -->
                                     <div style="font-size: 30px;font-family: 'Baskervville', serif;
                                         font-family: 'Tomorrow', sans-serif;
                                         font-family: 'Anton', sans-serif;
-                                        font-family: 'Arvo', serif;color: green;">200000$</div>
+                                        font-family: 'Arvo', serif;color: green;">{{categories[1]}}$</div>
                                     <div style="display: inline;">
                                         <i class=" fas fa-school ">
                                                 </i>
@@ -364,7 +364,7 @@ This attribute is only used if the href attribute is set. -->
                             <div class="card-footer border-top-blue-grey border-top-lighten-5 text-muted " style="padding: 2px;">
                                 <!-- <span class="float-left ">1 day ago</span> -->
                                 <div style="font-size: 30px; text-align: center;">
-                                    <div style="display: inline;font-family: 'Baskervville', serif;"> Education </div>
+                                    <div style="display: inline;font-family: 'Baskervville', serif;"> Health </div>
                                 </div>
                             </div>
                         </div>
@@ -385,7 +385,7 @@ This attribute is only used if the href attribute is set. -->
                                     <div style="font-size: 30px;font-family: 'Baskervville', serif;
                                         font-family: 'Tomorrow', sans-serif;
                                         font-family: 'Anton', sans-serif;
-                                        font-family: 'Arvo', serif;color: green;">200000$</div>
+                                        font-family: 'Arvo', serif;color: green;">{{categories[2]}}$</div>
                                     <div style="display: inline;">
                                         <i class=" fas fa-school ">
                                                 </i>
@@ -395,7 +395,7 @@ This attribute is only used if the href attribute is set. -->
                             <div class="card-footer border-top-blue-grey border-top-lighten-5 text-muted " style="padding: 2px;">
                                 <!-- <span class="float-left ">1 day ago</span> -->
                                 <div style="font-size: 30px; text-align: center;">
-                                    <div style="display: inline;font-family: 'Baskervville', serif;"> Education </div>
+                                    <div style="display: inline;font-family: 'Baskervville', serif;"> Family </div>
                                 </div>
                             </div>
                         </div>
@@ -416,7 +416,7 @@ This attribute is only used if the href attribute is set. -->
                                     <div style="font-size: 30px;font-family: 'Baskervville', serif;
                                         font-family: 'Tomorrow', sans-serif;
                                         font-family: 'Anton', sans-serif;
-                                        font-family: 'Arvo', serif;color: green;">200000$</div>
+                                        font-family: 'Arvo', serif;color: green;">{{categories[3]}}$</div>
                                     <div style="display: inline;">
                                         <i class=" fas fa-school ">
                                                 </i>
@@ -426,7 +426,7 @@ This attribute is only used if the href attribute is set. -->
                             <div class="card-footer border-top-blue-grey border-top-lighten-5 text-muted " style="padding: 2px;">
                                 <!-- <span class="float-left ">1 day ago</span> -->
                                 <div style="font-size: 30px; text-align: center;">
-                                    <div style="display: inline;font-family: 'Baskervville', serif;"> Education </div>
+                                    <div style="display: inline;font-family: 'Baskervville', serif;"> Debt/Loan </div>
                                 </div>
                             </div>
                         </div>
@@ -447,7 +447,7 @@ This attribute is only used if the href attribute is set. -->
                                     <div style="font-size: 30px;font-family: 'Baskervville', serif;
                                         font-family: 'Tomorrow', sans-serif;
                                         font-family: 'Anton', sans-serif;
-                                        font-family: 'Arvo', serif;color: green;">200000$</div>
+                                        font-family: 'Arvo', serif;color: green;">{{categories[4]}}$</div>
                                     <div style="display: inline;">
                                         <i class=" fas fa-school ">
                                                 </i>
@@ -457,7 +457,7 @@ This attribute is only used if the href attribute is set. -->
                             <div class="card-footer border-top-blue-grey border-top-lighten-5 text-muted " style="padding: 2px;">
                                 <!-- <span class="float-left ">1 day ago</span> -->
                                 <div style="font-size: 30px; text-align: center;">
-                                    <div style="display: inline;font-family: 'Baskervville', serif;"> Education </div>
+                                    <div style="display: inline;font-family: 'Baskervville', serif;"> Income </div>
                                 </div>
                             </div>
                         </div>
