--- a/templates/charts.html
+++ b/templates/charts.html
@@ -304,8 +304,8 @@
                                                     <td>{{ item.type }}</td>
                                                     <td><button type="button" class="btn btn-danger"><a
                                                                     href="/delete/{{ item._id }}">Delete</a></button></td>
-                                                    <td><button type="button" class="btn btn-info"><a
-                                                                    href="/edit/{{ item._id }}">Edit</a></button></td>
+                                                    <!-- <td><button type="button" class="btn btn-info"><a
+                                                                    href="/edit/{{ item._id }}">Edit</a></button></td> -->
                                                 </tr>
                                                 {% endif %} {% endfor %}
                                                 <!-- <h1>{{id_user}}</h1> -->
