--- a/templates/edit_form.html
+++ b/templates/edit_form.html
@@ -136,7 +136,7 @@
                             <input value='' type="text" id="edit_category" name="edit_category" placeholder="Restaurant">
 
                             <label for="date"><i class="fa fa-address-card-o"></i> Time</label>
-                            <input type="text" id="edit_date" name="edit_date" placeholder="22/11/2019">
+                            <input type="date" id="edit_date" name="edit_date" placeholder="22/11/2019">
 
                             <label for="note"><i class="fa fa-address-card-o"></i> Note</label>
                             <input type="text" id="edit_note" name="edit_note" placeholder="abcdefgh">
