--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,7 @@ The <link> tag is used to link to external style sheets. -->
 
     <!-- The type attribute specifies the Internet media type (formerly known as MIME type) of the linked document/resource.
 This attribute is only used if the href attribute is set. -->
-    <!-- <link rel="shortcut icon" type="image/x-icon" href="../static/images/ico/favicon.ico"> -->
+    <link rel="shortcut icon" type="image/x-icon" href="../static/images/ico/favicon.ico">
     <!-- <link href="https://fonts.googleapis.com/css?family=Muli:300,300i,400,400i,600,600i,700,700i%7CComfortaa:300,400,700" rel="stylesheet"> -->
     <!-- <link href="https://maxcdn.icons8.com/fonts/line-awesome/1.1/css/line-awesome.min.css" rel="stylesheet"> -->
     <script src="https://kit.fontawesome.com/7114871e06.js" crossorigin="anonymous"></script>
@@ -333,7 +333,7 @@ This attribute is only used if the href attribute is set. -->
                             <div class="card-footer border-top-blue-grey border-top-lighten-5 text-muted " style="padding: 2px;">
                                 <!-- <span class="float-left ">1 day ago</span> -->
                                 <div style="font-size: 30px; text-align: center;">
-                                    <div style="display: inline;font-family: 'Baskervville', serif;"> Personal </div>
+                                    <div style="display: inline;font-family: 'Baskervville', serif;"> Personal - Outcome </div>
                                 </div>
                             </div>
                         </div>
@@ -364,7 +364,7 @@ This attribute is only used if the href attribute is set. -->
                             <div class="card-footer border-top-blue-grey border-top-lighten-5 text-muted " style="padding: 2px;">
                                 <!-- <span class="float-left ">1 day ago</span> -->
                                 <div style="font-size: 30px; text-align: center;">
-                                    <div style="display: inline;font-family: 'Baskervville', serif;"> Health </div>
+                                    <div style="display: inline;font-family: 'Baskervville', serif;"> Health - Outcome </div>
                                 </div>
                             </div>
                         </div>
@@ -395,7 +395,7 @@ This attribute is only used if the href attribute is set. -->
                             <div class="card-footer border-top-blue-grey border-top-lighten-5 text-muted " style="padding: 2px;">
                                 <!-- <span class="float-left ">1 day ago</span> -->
                                 <div style="font-size: 30px; text-align: center;">
-                                    <div style="display: inline;font-family: 'Baskervville', serif;"> Family </div>
+                                    <div style="display: inline;font-family: 'Baskervville', serif;"> Family - Outcome </div>
                                 </div>
                             </div>
                         </div>
@@ -426,7 +426,7 @@ This attribute is only used if the href attribute is set. -->
                             <div class="card-footer border-top-blue-grey border-top-lighten-5 text-muted " style="padding: 2px;">
                                 <!-- <span class="float-left ">1 day ago</span> -->
                                 <div style="font-size: 30px; text-align: center;">
-                                    <div style="display: inline;font-family: 'Baskervville', serif;"> Debt/Loan </div>
+                                    <div style="display: inline;font-family: 'Baskervville', serif;"> Debt/Loan - Outcome </div>
                                 </div>
                             </div>
                         </div>
