--- a/templates/index.html
+++ b/templates/index.html
@@ -147,7 +147,7 @@ This attribute is only used if the href attribute is set. -->
             <ul class="nav navbar-nav flex-row">
                 <li class="nav-item mr-auto">
                     <a class="navbar-brand" href="/"><img class="brand-logo" alt="Chameleon admin logo" src="../static/images/logo/logo.png" />
-                        <h3 class="brand-text">Home</h3>
+                        <h3 class="brand-text">AppMoney</h3>
                     </a>
                 </li>
                 <li class="nav-item d-md-none"><a class="nav-link close-navbar"><i class="ft-x"></i></a></li>
